# challenge

./: .gitignore  README.md
c++/algorithms/sorting/: CMakeLists.txt  vc140.idb
c++/algorithms/sorting/include/: sorting.h
c++/algorithms/sorting/interface/: sorting.ixx
c++/algorithms/sorting/src/: sorting.ixx  sorts.cpp
c++/algorithms/sorting/test/: TestSorting.cpp  TestSorting.h
c++/functional/: CMakeLists.txt  functional.cpp  functional.h
